<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>de.qytera</groupId>
        <artifactId>qtaf</artifactId>
        <version>0.2.3</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>qtaf-xray-plugin</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Dependency versions -->
        <mockitoVersion>5.3.1</mockitoVersion>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/de.qytera/qtaf-core -->
        <dependency>
            <groupId>de.qytera</groupId>
            <artifactId>qtaf-core</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/de.qytera/qtaf-html-report-plugin -->
        <dependency>
            <groupId>de.qytera</groupId>
            <artifactId>qtaf-html-report-plugin</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/de.qytera/qtaf-http -->
        <dependency>
            <groupId>de.qytera</groupId>
            <artifactId>qtaf-http</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockitoVersion}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>